# MyMathLib

./: .gitignore  AVL_Tree.cpp  AVL_Tree.h  Binary_Tree.cpp  Binary_Tree.h  CMakeLists.txt  List.cpp  List.h  Matrix.cpp  Matrix.h  Prefix_Tree.cpp  Prefix_Tree.h  Red_Black_Tree.cpp  Red_Black_Tree.h  avl_tree.cpp  avl_tree.h  library.h  math.cpp  math.h  sort.cpp  sort.h
